# pman

./: Cargo.toml  README.md  install.sh
src/: app.rs  error.rs  main.rs
src/actions/: action.rs  mod.rs
src/components/: buffer_picker.rs  command_palette.rs  confirm_dialog.rs  file_picker.rs  fuzzy_list.rs  help_bar.rs  input_dialog.rs  mod.rs  session_picker.rs  traits.rs  worktree_picker.rs
src/integrations/: git.rs  mod.rs  nvim.rs  tmux.rs
src/models/: buffer.rs  command.rs  mod.rs  session.rs  worktree.rs
src/tui/: event.rs  mod.rs  terminal.rs
